Bug 15695 - "inherit permissions = yes" triggers assert() in vfs_default when creating a stream
Summary: "inherit permissions = yes" triggers assert() in vfs_default when creating a ...
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-13 08:29 UTC by Ralph Böhme
Modified: 2024-10-14 11:33 UTC (History)
1 user (show)

See Also:


Attachments
Patch for 4.20 and 4.21 cherry-picked from master (8.24 KB, patch)
2024-09-06 08:19 UTC, Ralph Böhme
vl: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2024-08-13 08:29:18 UTC
When inherting permissions on the created stream, we call into the VFS to fetch the streams security descriptor via inherit_access_posix_acl() -> copy_access_posix_acl() -> SMB_VFS_SYS_ACL_GET_FD() passing the stream fsp which triggers the assert SMB_ASSERT(!fsp_is_alternate_stream(fsp)) in vfswrap_sys_acl_get_fd() in vfs_default.

Working on a fix...
Comment 1 Samba QA Contact 2024-09-02 08:56:04 UTC
This bug was referenced in samba master:

09835608307ff2580f1aada84d44feddae17c80f
ecb8a99a2c7ba36f9adc50ef13cd8465a0c49b19
Comment 2 Ralph Böhme 2024-09-06 08:19:33 UTC
Created attachment 18436 [details]
Patch for 4.20 and 4.21 cherry-picked from master
Comment 3 Jule Anger 2024-09-06 14:04:17 UTC
Pushed to autobuild-v4-{21,20}-test.
Comment 4 Samba QA Contact 2024-09-06 15:27:04 UTC
This bug was referenced in samba v4-20-test:

a60419838bacd6e9bb5f2184b2aa6b26ab342c0b
9559c00d063bf63461a17b3c48804a08cfea5f95
Comment 5 Samba QA Contact 2024-09-09 08:30:05 UTC
This bug was referenced in samba v4-21-test:

882eadc385574bd06bf06bd8a9b50614b02a244a
505f48fff985f40ea31d9f75ee19ac6ae5de1632
Comment 6 Jule Anger 2024-09-09 09:32:29 UTC
Closing out bug report.

Thanks!
Comment 7 Samba QA Contact 2024-09-17 11:46:49 UTC
This bug was referenced in samba v4-20-stable (Release samba-4.20.5):

a60419838bacd6e9bb5f2184b2aa6b26ab342c0b
9559c00d063bf63461a17b3c48804a08cfea5f95
Comment 8 Samba QA Contact 2024-10-14 11:33:34 UTC
This bug was referenced in samba v4-21-stable (Release samba-4.21.1):

882eadc385574bd06bf06bd8a9b50614b02a244a
505f48fff985f40ea31d9f75ee19ac6ae5de1632